--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   },
   "devDependencies": {
     "electron": "^1.6.11",
+    "electron-devtools-installer": "^2.2.1",
     "electron-installer-windows": "^0.2.0",
     "electron-packager": "^8.7.2"
   }
